# dbc-bot-2

./: .dockerignore  .env.example  .gitignore  .json  Cargo.toml  Dockerfile  README.md  build.rs  dev.docker-compose.yml  docker-compose.yml  prod.docker-compose.yml  script.sh  statshot.sh
.devcontainer/dbc-bracket/: devcontainer.json
.devcontainer/dbcbot/: devcontainer.json
.devcontainer/images/: devcontainer.json
.github/workflows/: bracket.yaml  bracket.yml  dbcbot.yml  env.yaml  migrations.yml  run.yaml  run.yml  token.yaml  token.yml
dbc-bot/: .env.example  Cargo.toml  Dockerfile  build.rs
dbc-bracket/: Dockerfile  README.md  app.json  bun.lockb  global.d.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
dbcbot/: .env.example  Cargo.toml  Dockerfile  sqlx-data.json
dbcbot/.sqlx/: query-01edae9ee55d34a29d9bbf88b2edae32eaf345c0f2cd484dd30f0d724ee81153.json  query-054426a612e8dc61b513e8e7a165b6eb3eeaaf526e6511cfdda8d3ea30bee888.json  query-05af4b6e6c40b24dc4c65670d213ce785a14aa56690572f2ce2f96e6ae9ac139.json  query-05f0ba5618657f3b537cb727639aa49475f603a447a7f38c554f0c1a2dfc7060.json  query-067f6bc018326d482cad17a00a2758f322e8d9a9ebbf7b66e4bf12829d981d32.json  query-0946eae0329521b5fadf65524f298a3d8b13faaa1bc7ddb4cd69476da650d86f.json  query-0be741aa61fbfdea7d3fff0a80da5695f46af002cca8c2ee6588ce4a042ce75f.json  query-0d6825afadd0475da0c2b5319fd24e14062552ff46087ffa679f15064f9cae4a.json  query-0fc428e94baf3927d65abb7e1e9c828f7bf352ceaeb3eba132f0e0e4ce173c97.json  query-10e1ba5d02097568ec95a97c33eaf7d40eb1e70bead54f88022a438240e577be.json  query-111b1e29fb0b453381f4c2bfa4cd004780d4ed6345697d89c6447664a49c54c8.json  query-116fb3b5723651aed3959db6e334364e8ceefb288f14b2ca22ade1e3ba28ab5e.json  query-118e0ce33d883f0cf12cddaacc75f71e5da6b99c2acaa1e941ad6c89487cb051.json  query-11a4bdaaecad20925f93d5bbf37227d4566f30756c71de1e4b0b2c61d2a975ac.json  query-12050800735dd45c6c1fedbc63f1a8236af4aac1b7876f7ed39db01259ee2466.json  query-15bf8f22a5bfa88118ecb83d521b5207261afe69f7835a4f3a18cdd73f444d01.json  query-160bb8bdb68a6739f3f6e642b954069bfa0c8721d82164acac4845f7e7819b0b.json  query-18786acf0b397cbc5d5b99791fc2dccf97aea05a73c045e742b2f286e803d146.json  query-1919505811724015e32eb8e537b3be2cd35ddc550324ed6e2595672cc633bcc9.json  query-191e0a7ac6c2e9c6960e147974946d65aec2104b256470becaa16e658e50eee3.json  query-198ef6455480964d6ffeff0bb028277cab39506bb0ae14895760e3b18c6c9364.json  query-1a12b22fd58710ef5bd6ed8508b719dfb66d8ae273e299633b08b0e43fd598a0.json  query-1a3928444aad8944412ba0f8ed6571453e5cad4600862dc9f7398c267a1e4d55.json  query-1ad902209096449b501b28b2ff19281a9caa3c01e598d779b0d636c50f413031.json  query-1d394d0aad635ba72c509f14b47d58470decd382721e3a529570ae9757f4ad67.json  query-1eeb3e1cc3d738b0b5cb5a4001728733e287af09876f436cc5b6a2ba22bb065f.json  query-21b26e4123ed6e6a3d36b77a9a76f48f9ed47c5441f433e79099c4ddba4865fe.json  query-224271c61a01aad7884a16473686fa92e06629c83e563e75abb2b7f5cffdc56b.json  query-236d17f8b729083e66c56644e9b570b7b9b84910ffffdcf86063f73ddcad2fa7.json  query-26ecd693a835dc3a20ee8167443261549384dbdca9494eb0e34667f0a210cdd6.json  query-2b81f72677c92b7277f81bece06041966d8877ae9c0b00855ec923a2c87e4524.json  query-2c3e62149bc119c25728a79444bd2ce612171b97c6936d4c0233ee2cbf00e730.json  query-2cbf526aa6b17a3228c99f30afb4796cebdbc421816362fd3d54d70d3677f6e8.json  query-2e60434a8fcd1c1af84938a150b71e7a97ef38f9bd17dc06cab3290dc80932fa.json  query-2fe126bd7352faefe9386a2f8ab416864fcabac478c10171ae2cae8f5c17f5f8.json  query-323bd85ad2e0fcbac3097b9ff409c9234945d64197f0de2f2eef5a329d306681.json  query-3616d2734b8903c20f8db558bbfea03f214aeade7d3e399fab53784667dc25bd.json  query-363f10782df8ef378533516fe25023d2dd3bb492b49372513da4acab31ce94a2.json  query-37691aaaf3551fec5e8113ba3c8b41adfc47ea3fd6dc0b0b3ce7751a8af5dfb8.json  query-37c13b5d2b0cf230123826d95532f78a0ddfc9b1ceb1fd75dd9f2b5cd8d67df8.json  (+130 more)
dbcbot/migrations/: 20240330072934_create_config.sql  20240330072936_create_users.sql  20240330072940_create_tournaments.sql  20240330073147_create_tournament_players.sql  20240330073151_create_matches.sql  20240330092559_create_manager_roles.sql  20240629082558_create_banned_brawlers.sql  20240709202026_create_records.sql  20240709210549_create_battles.sql  20240709210645_create_battle_classes.sql  20240709210759_create_events.sql  20240901211407_create_brawlmap_table.sql  20240916142519_create_mail.sql  20240916142519_mail.sql  20240919132646_create_match_players.sql  20241227072836_create_ban_list.sql  script.sh  total.sql
dbcbot/src/: api.rs  event_handler.rs  log.rs  main.rs
dbcbot/src/api/: brawlify.rs  images.rs  mod.rs  models.rs  official_brawl_stars.rs
dbcbot/src/commands/: manager_commands.rs  marshal_commands.rs  mod.rs  owner_commands.rs  test_commands.rs  user_commands.rs
dbcbot/src/commands/test/: battle_log.rs  mod.rs
dbcbot/src/database/: mod.rs  models.rs
dbcbot/src/mail/: mod.rs  model.rs
dbcbot/src/utils/: discord.rs  error.rs  lru.rs  mod.rs  prompt.rs  shorthand.rs  time.rs
images/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
migrations/: 20240330064429_create-tables.sql  20240330072934_create_config.sql  20240330072940_create_tournaments.sql  20240330072944_create_players.sql  20240330073147_create_tournament_players.sql  20240330073151_create_matches.sql  20240330073157_create_match_schedules.sql  20240330092559_create_manager_roles.sql
src/: api.rs  database.rs  error.rs  log.rs  main.rs  models.rs  reminder.rs  tournament_model.rs
(+91 files in other folders)
