[package]
name = "dbc-bot-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
dotenv = "0.15.0"
poise = { version = "0.6.1", features = [] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "macros", "uuid"]}
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }

[build-dependencies]
tokio = { version = "1.21.2", default-features = false, features = [
    "macros",
] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
dotenv = "0.15.0"
