[package]
name = "dbcbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.37"
dotenv = "0.15.0"
futures = "0.3.30"
poise = { version = "0.6.1", features = [] }
prettytable = "0.10.0"
reqwest = { version = "0.12.2", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "macros"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
