[package]
name = "dbcbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.37", default-features = false }
dotenv = "0.15.0"
futures = { version = "0.3.30", default-features = false }
poise = "0.6.1"
prettytable = { version = "0.10.0", default-features = false }
reqwest = { version = "0.12.2", default-features = false, features = ["json"] }
serde = { version = "1.0.197", default-features = false }
serde_json = "1.0.120"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "runtime-tokio"] }
sqlx = { version = "0.7.4", features = ["json", "macros", "migrate", "postgres"], default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"], default-features = false }
strum = { version = "0.26.3", features = ["derive"], default-features = false }
cached = { version = "0.52.0", features = ["async", "cached_proc_macro", "proc_macro"], default-features = false }
base64 = { version = "0.22.1", default-features = false }
async-recursion = "1.1.1"
