[package]
name = "dbcbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dotenv = "0.15.0"
futures = "0.3.31"
poise = { version = "0.6.1", features = ["cache"] }
prettytable = "0.10.0"
reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "macros",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
cached = { version = "0.54.0", features = ["async"] }
base64 = "0.22.1"
async-recursion = "1.1.1"
regex = "1.11.1"

[profile.dev]
incremental = true
